# authshield

./: .gitignore  LICENSE
.github/workflows/: publish.yml
authshield/: README.md  pyproject.toml
authshield/src/authshield/: __init__.py  config.py  extended.py
authshield/src/authshield/_shared/: _in_memory_rate_limiter.py  rate_limiter.py
authshield/src/authshield/auth/: __init__.py  _auth_deps.py  _auth_handler.py  _auth_routes.py  _hashing.py  _require_auth.py  _use_auth.py  models.py
authshield/src/authshield/csrf/: __init__.py  _csrf_handler.py  _use_csrf.py
authshield/src/authshield/session/: __init__.py  _in_memory_session_storage.py  base.py
authshield/tests/: test_auth_routes.py  test_csrf.py  test_require_auth.py  test_update_roles_on_login.py
