[project]
name = "authshield"
version = "0.1.0"
description = "FastAPI-compatible authentication, OAuth, CSRF, and session management."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Johannes Schiemer", email = "authshield@totallylegit.zip" }
]
dependencies = [
    "argon2-cffi>=25.1.0",
    "authlib>=1.7.2",
    "fastapi>=0.138.2",
    "itsdangerous>=2.2.0",
    "starlette>=1.3.1",
]
keywords = ["fastapi", "auth", "oauth", "csrf", "session", "security"]
classifiers = [
    "Framework :: FastAPI",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
